# AUTOMATED_WEARABLE_DEVICE_FINAL

./: .gitignore  Procfile  README.md  alert_system.py  config.py  dashboard.py  data_logger.py  decision_engine.py  main.py  requirements.txt  run.ps1  run.sh  sensor_simulator.py  setup.cfg
backend/: __init__.py  alerts.py  auth.py  db.py  decision_engine.py  models.py  rate_limit.py  routes_admin.py  routes_ui.py  routes_worker.py
demo_data/: scenario_fatigue_collapse.csv  scenario_gas_spike.csv  scenario_normal.csv  scenario_warning_spo2.csv
scripts/: demo_runner.py
static/css/: style.css
static/js/: admin.js  worker.js
templates/: admin.html  base.html  worker.html
tests/: test_alerts.py  test_decision_engine.py
