[metadata]
name = automated-wearable-device
version = 0.0.0
description = Industrial Worker Safety Monitoring Web App
author = Vignesh
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    flask==3.0.2
    flask_sqlalchemy==3.1.1
    flask_bcrypt==1.0.1
    pandas==2.2.2
    numpy==1.26.4
    requests==2.31.0

python_requires = >=3.11
